--- a/index.html
+++ b/index.html
@@ -8,167 +8,189 @@
 	<noscript>You are extra cool because whatever you are viewing this on does not support javascript!</noscript>
 	<script src="/base.js"></script>
 	<script>
-		var poweredOn=true;
-		var loggedIn=false;
-		var terminalHistory=[];
-		var terminalHTML='';
-		var terminalText=document.createElement('div');
-		terminalText.style.position='absolute';
-		terminalText.style.top='0%';
-		terminalText.style.paddingLeft='12.5%';
-		terminalText.style.paddingTop='6.25%';
-		terminalText.style.width='56.25%';
-		terminalText.style.height='58.333333333333336%';
-		terminalText.style.fontFamily='localUnifont';
-		terminalText.style.color='#00FF00';
-		terminalText.style.wordWrap='break-word';
-		terminalText.style.overflow='hidden';
-		var fontScale=0.02;
-		var fontWidthModifier=0.8666666666666667;
-		var fontHeightModifier=1.8181818181818182;
-		var terminalCharacterWidth=0;
-		var terminalCharacterHeight=0;
-		function getTerminalDimensions() {
-			var tw=parseFloat(document.getElementById('terminal-container').style.width);
-			var th=parseFloat(document.getElementById('terminal-container').style.height);
-			var tf=parseFloat(terminalText.style.fontSize);
-			terminalCharacterWidth=Math.floor(tw/(tf*fontWidthModifier));
-			terminalCharacterHeight=Math.floor(th/(tf*fontHeightModifier));
-		}
 		function adjustScale() {
 			if(window.innerHeight < (window.innerWidth*0.75)) {
 				document.getElementById('terminal-container').style.width=window.innerHeight*1.3333333333333333;
 				document.getElementById('terminal-container').style.height=window.innerHeight;
 				document.getElementById('terminal-container').style.marginLeft=((window.innerWidth-(window.innerHeight*1.3333333333333333))/2)+'px';
-				terminalText.style.fontSize=(window.innerHeight*fontScale)+'px';
 			} else {
 				document.getElementById('terminal-container').style.width=window.innerWidth;
 				document.getElementById('terminal-container').style.height=window.innerWidth*0.75;
 				document.getElementById('terminal-container').style.marginLeft='0%';
-				terminalText.style.fontSize=((window.innerWidth*0.75)*fontScale)+'px';
 			};
 		}
-		function changeTerminalFontSize(ratio) {
-			fontScale=ratio;
-			adjustScale();
-			getTerminalDimensions();
+		//I WISH I WAS WRITING IN JAVA!
+		var fontSize=20;
+		var terminalScreenBorder=10;
+		var rows=(400-(terminalScreenBorder*2))/fontSize;
+		var cols=(500-(terminalScreenBorder*2))/(fontSize/2);
+		var scroll=0;
+		var terminalLinks=[null]; //Setup links first then revert back to them!
+		var terminalBuffer=[]; //Array of strings with the length of cols along with integer array referencing links.
+		var typeRate=1;
+		var terminalBusy=false;
+		var terminalCanvas=document.createElement("canvas");
+		var terminalContext=terminalCanvas.getContext("2d");
+		terminalCanvas.width=500;
+		terminalCanvas.height=400;
+		terminalCanvas.style.position='absolute';
+		terminalCanvas.style.top='4.1666666666666664%';
+		terminalCanvas.style.left='9.375%';
+		terminalCanvas.style.width='62.5%';
+		terminalCanvas.style.height='66.66666666666667%';
+		var depletionInterval=20;
+		var depletionSize=5;
+		var rrgb=[0,30,0];
+		function deplete() {
+			var screenImageData = terminalContext.getImageData(0,0,terminalCanvas.width,terminalCanvas.height);
+		  for(var cp=0;cp<screenImageData.data.length;cp+=4) {
+		    for(var cc=0;cc<3;cc++) {
+		      if(screenImageData.data[cp+cc]!=rrgb[cc]) {
+		      	var diff=screenImageData.data[cp+cc]-rrgb[cc];
+		        if(diff>0) {
+		          if(depletionSize<Math.abs(diff)) {
+		          	screenImageData.data[cp+cc]-=depletionSize;
+		          } else {
+		          	screenImageData.data[cp+cc]-=diff;
+		          }
+		        } else if(diff<0) {
+		        	if(depletionSize<Math.abs(diff)) {
+		          	screenImageData.data[cp+cc]+=depletionSize;
+		          } else {
+		          	screenImageData.data[cp+cc]+=diff;
+		          }
+		        }
+		      }
+		    }
+		  }
+		  terminalContext.putImageData(screenImageData,0,0);
 		}
-		function getTerminalTextLineCount(html) {
-			return Math.floor(removeHTML(html).length/terminalCharacterWidth);
-		}
-		function getTerminalTextArray(html) {
-			htmlArray=[];
-			var index=0;
-			var content='';
-			while(html.length>0) {
-				index=html.search(/(<([^>]+)>)/ig);
-				if(index>-1) {
-					if(index != 0) {
-						content=html.substr(0,index);
-						htmlArray.push([content,content.length]);
-						html=html.substr(index,html.length);
-					} else {
-						content=html.match(/(<([^>]+)>)/ig)[0];
-						htmlArray.push([content,removeHTML(content).length]);
-						html=html.substr(index+content.length,html.length);
-					}
-				} else {
-					htmlArray.push([html,html.length]);
-					html='';
-				}
-			}
-			return htmlArray;
-		}
-		function getTerminalTextHTML(scroll,html) {
-			var newHTML='';
-			var terminalCharacterCount=terminalCharacterWidth*terminalCharacterHeight;
-			var scrollLines=getTerminalTextLineCount(html)-terminalCharacterHeight;
-			var textArray=getTerminalTextArray(html);
-			if(scrollLines<0) {
-				scrollLines=0;
-			}
-			var noHTML=removeHTML(html);
-			var startElement=0;
-			var endElement=0;
-			var endIndex=noHTML.length-(scroll*terminalCharacterWidth);
-			var startIndex=endIndex-terminalCharacterCount;
-			var currentIndex=0;
-			while(currentIndex<startIndex) {
-				currentIndex+=textArray[startElement][1];
-				if(currentIndex<startIndex) {
-					startElement++;
-				}
-			}
-			endElement=startElement;
-			while(currentIndex<endIndex) {
-				currentIndex+=textArray[endElement][1];
-				if(currentIndex<endIndex) {
-					endElement++;
-				}
-			}
-			if(textArray[startElement][0].length>terminalCharacterCount) {
-				newHTML=textArray[startElement][0].substr(startIndex,endIndex);
-			} else {
-				for(var currentElement=startElement;currentElement<endElement;currentElement++) {
-					newHTML+=textArray[currentElement][0];
-				}
-			}
-			return newHTML;
-		}
-		function login(load) {
-			terminalHistory.push('l'); //This should always be the first command!
-			if(load==true) {
-				//Just load text
-			} else {
-				//Type out animated etc
-			};
+		terminalContext.fillStyle = "#00FF00";
+		terminalContext.fillRect(0, 0, terminalCanvas.width, terminalCanvas.height);
+		setInterval(deplete,depletionInterval);
+		var terminalCursor = {
+			x:0,
+			y:0
 		};
+		var terminalLines=[];
+		function initTerminalLines() {
+			var tli=0;
+			if(terminalLines.length!=0) {
+				for(tli=(terminalLines.length-1);tli>=0;tli--) {
+					terminalLines[tli].remove()
+					terminalLines.pop();
+				}
+			}
+			for(tli=0;tli<rows;tli++) {
+				var newLine = [];
+				for(var cnc=0;cnc<cols;cnc++) {
+					newLine.push(document.createElementNS('http://www.w3.org/2000/svg','text'));
+					newLine[cnc].setAttribute('x',75+terminalScreenBorder+((fontSize/2)*cnc));
+					newLine[cnc].setAttribute('y',25+((terminalScreenBorder+((tli)*fontSize))+fontSize));
+					newLine[cnc].setAttribute('style','font-size:'+fontSize+'px;font-family:localUnifont;fill:#00FF00;fill-opacity:1;stroke:none;stroke-width:0.0');
+					newLine[cnc].textContent=' ';
+					document.getElementById('terminal').insertBefore(newLine[cnc],document.getElementById('terminal').firstChild);
+				}
+				terminalLines.push(newLine);
+			}
+		}
+		function adjustFont(newSize) {
+			fontSize=newSize;
+			rows=(400-(terminalScreenBorder*2))/fontSize;
+			cols=(500-(terminalScreenBorder*2))/(fontSize/2);
+			terminalBuffer=[]; //Reset Buffer!
+			terminalCursor.x=0;
+			terminalCursor.y=0;
+		}
+		var lineIndex=0;
+		var lineStop=0;
+		function render() {
+			if(terminalBuffer.length<=rows) {
+				scroll=0;
+			}
+			lineIndex=(terminalBuffer.length-1)-scroll;
+			lineStop=lineIndex-(rows-1);
+			if(lineStop<0) {
+				lineStop=0;
+			}
+			while(lineIndex>=lineStop) {
+				var curText=terminalBuffer[lineIndex];
+				for(var curChar=0;curChar<curText[0].length;curChar++) {
+					terminalContext.fillText(curText[0][curChar],terminalScreenBorder+((fontSize/2)*curChar),(terminalScreenBorder+((lineIndex-lineStop)*fontSize))+fontSize);
+					if(curText[1][curChar]!=0) {
+						terminalLines[lineIndex-lineStop][curChar].onclick=terminalLinks[curText[1][curChar]];
+					} else {
+						terminalLines[lineIndex-lineStop][curChar].onclick=null;
+					}
+					terminalLines[lineIndex-lineStop][curChar].textContent=curText[0][curChar];
+				}
+				lineIndex--;
+			}
+		}
+		function setChar(char,link) {
+			if(terminalBusy==false) {
+				terminalBusy=true;
+				if(char.length>1) {
+					char=char.substr(0,1);
+				}
+				if(terminalCursor.y>(rows-1)) {
+					terminalCursor.y=(rows-1);
+				} else if(terminalCursor.y<0) {
+					terminalCursor.y=0;
+				}
+				if(terminalCursor.x>(cols-1)) {
+					terminalCursor.x=(cols-1);
+				} else if(terminalCursor.x<0) {
+					terminalCursor.x=0;
+				}
+				while(terminalBuffer[terminalCursor.y]==null) {
+					terminalBuffer.push(['',[]]);
+				}
+				for(var cbli=0;cbli<cols;cbli++) {
+					terminalBuffer[terminalBuffer.length-1][1].push(0);
+				}
+				var offsetRow=0;
+				if(terminalBuffer.length<=rows) {
+					offsetRow=terminalCursor.y;
+				} else {
+					offsetRow=((terminalBuffer.length-1)-rows)+terminalCursor.y;
+				}
+				var curLine=terminalBuffer[offsetRow];
+				while(curLine[0].length<=terminalCursor.x) {
+					curLine[0]+=' ';
+					curLine[1].push(0);
+				}
+				curLine[0]=curLine[0].substr(0, terminalCursor.x) + char+ curLine[0].substr(terminalCursor.x + 1);
+				curLine[1][terminalCursor.x]=link;
+				terminalBusy=false;
+			}
+		}
 		function main(fileData) {
 			document.getElementById('terminal-container').innerHTML=fileData.responseText;
 			document.getElementById('terminal').setAttribute('width','100%');
 			document.getElementById('terminal').setAttribute('height','100%');
-			document.getElementById('terminal').style.zindex='-1';
+			document.getElementById('terminal').style.zIndex='-1';
 			adjustScale();
-
-			//Setup the terminals structure:
-			//POWER BUTTON
-
-			document.getElementById('terminal-container').appendChild(terminalText);
-			getTerminalDimensions();
-			/*loadFile("res/text/lang/eng/test.txt",null,function(fileData) {
-				terminalText.innerHTML=fileData.responseText;
-			});*/
-			//'<html><head><title>Hello World</title></head><body><div>This is a <a href="index.html">test</a>!</div></body></html>'
-			loadFile("/res/text/lang/eng/test.txt",null,function(fileData) {
-				terminalHTML=fileData.responseText;
-				var sc=getTerminalTextLineCount(terminalHTML)-terminalCharacterHeight
-				var i=0;
-				var m=1;
-				setInterval(function() {
-					if(i<sc && i!=0) {
-						terminalText.innerHTML=getTerminalTextHTML(i,terminalHTML);
-					} else if(i==0) {
-						m=1;
-					} else {
-						m=-1;
-					}
-					i+=m;
-				},100);
-			});
-
+			document.getElementById('terminal-container').insertBefore(terminalCanvas,document.getElementById('terminal-container').firstChild);
+			terminalCanvas.style.zIndex='-2';
+			terminalContext.font=fontSize+'px localUnifont';
+			terminalContext.fillStyle = '#00ff00';
+			initTerminalLines();
+			terminalCursor.x=Math.floor(cols/2)-1;
+			terminalCursor.y=Math.floor(rows/2)-1;
+			setChar('#',0);
+			terminalCursor.x=Math.floor(cols/2);
+			terminalCursor.y=Math.floor(rows/2)-1;
+			setChar('#',0);
+			terminalCursor.x=Math.floor(cols/2)-1;
+			terminalCursor.y=Math.floor(rows/2);
+			setChar('#',0);
+			terminalCursor.x=Math.floor(cols/2);
+			terminalCursor.y=Math.floor(rows/2);
+			setChar('#',0);
+			render();
 			//Get cookie data here and load values!
-			if(poweredOn==true) {
-				if(loggedIn==false) {
-					login(false);
-				} else {
-					if(terminalHistory.length==0) {
-						login(true);
-						//Start at home screen
-					} else {
-						//Load last commands
-					};
-				};
-			};
+
 		};
 		loadFile("res/img/terminal.svg",null,main);
 		window.addEventListener('resize',adjustScale);
