--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
 		};
 		var terminalLines=[];
 		function initTerminalLines() {
+			terminalLines=[];
 			var tli=0;
 			if(terminalLines.length!=0) {
 				for(tli=(terminalLines.length-1);tli>=0;tli--) {
@@ -111,18 +112,20 @@
 				lineStop=0;
 			}
 			while(lineIndex>=lineStop) {
+				terminalLines[lineIndex-lineStop].innerHTML='';
+				terminalLines[lineIndex-lineStop][1]=[];
 				var curText=terminalBuffer[lineIndex];
 				for(var curChar=0;curChar<cols;curChar++) {
 					if(curText[0].length>curChar) {
 						terminalContext.fillText(curText[0][curChar],terminalScreenBorder+((fontSize/2)*curChar),(terminalScreenBorder+((lineIndex-lineStop)*fontSize))+fontSize);
 						var newLink = document.createElementNS('http://www.w3.org/2000/svg','tspan');
 						if(curText[1][curChar]!=0) {
-							newLink.onClick=terminalLinks[curText[1][curChar]];
+							newLink.onclick=terminalLinks[curText[1][curChar]];
 						}
 						if(curText[0].charAt(curChar)==' ') {
-							terminalLines[lineIndex-lineStop].innerHTML+='&nbsp;';
+							newLink.innerHTML+='&nbsp;';
 						} else {
-							terminalLines[lineIndex-lineStop].innerHTML+=curText[0].charAt(curChar);
+							newLink.innerHTML+=curText[0].charAt(curChar);
 						}
 						terminalLines[lineIndex-lineStop].appendChild(newLink);
 					}
@@ -224,8 +227,12 @@
 			terminalContext.fillStyle = '#00ff00';
 			initTerminalLines();
 			//setChar('H',0);
+			terminalLinks.push(function() {
+				scroll++;
+				render();
+			});
 			loadFile("res/text/lang/eng/test.txt",null,function(fileData) {
-				write(fileData.responseText,0,true);
+				write(fileData.responseText,1,true);
 				render();
 			});
 			//Get cookie data here and load values!
